<resources>
    <string name="app_name">AudiSrbija</string>
    <string name="welcome_string">Dobrodošli!</string>
    <string name="order_button_string">Naruči</string>
    <string name="audi_website">http://www.audi.rs/</string>
    <string name="Model">Model</string>
    <string name="model_text_view">Model</string>
    <string name="fuel_text_view">Gorivo</string>
    <string name="additionalEquipement_text_view">Dodatna oprema</string>
    <string name="model_A4">A4</string>
    <string name="model_A5">A5</string>
    <string name="fuel_dizel">Dizel</string>
    <string name="fuel_benzin">Benzin</string>
    <string name="additionalEquipement_xenon_svetla">Xenon svetla</string>
    <string name="additionalEquipement_parking_senzori">Parking senzori</string>
    <string name="forward_to_order_p2">Prosledi</string>
    <string name="odabarli_ste_text_view">Odabrali ste:\n</string>
    <string name="additional_equipement_text_view">Dodatna oprema:</string>
    <string name="motor_power">Snaga motora</string>
    <string name="send_final_button">Pošalji</string>
    <string name="send_final_toast">Uskoro ćete dobiti poruku o stanju izabranog automobila od</string>
    <string name="send_final_toast1">na lageru.</string>
    <string name="izaberi_seriju">Izaberite seriju automobila:</string>
    <string name="color">Boja</string>
    <string name="additional_equipement_choose">Izaberite dodatnu opremu</string>
    <string name="rs_equipement">Svi modeli iz serije RS\n su opremljeni\n punom opremom</string>
    <string name="enter_your_name">Unesite Vaše ime</string>
    <string name="enter_your_surname">Unesite Vaše prezime</string>
    <string name="enter_your_email">Unesite Vašu email adresu</string>
    <string name="payment_text">Izaberite način plaćanja</string>
    <string name="payment">Način plaćanja</string>
    <string name="your_car">Pogledajte\n sliku automobila</string>
    <string name="you_picked_model">Model:</string>
    <string name="you_picked_hs">Konjaža:</string>
    <string name="you_picked_color">Boja:</string>
    <string name="you_picked_fuel">Gorivo:</string>
    <string name="must_select_fields">Sva polja sem dodatne\nopreme su obavezna!</string>
    <string name="back_OK">OK</string>
    <string name="monthly_payment">Plaćanje na rate:</string>
    <string name="three_years">3 godine</string>
    <string name="six_years">6 godina</string>
    <string name="nine_years">9 godina</string>
    <string name="twelve_years">12 godina</string>
    <string name="payment_monthly">Možete platiti na</string>
    <string name="more_details_price">Detaljnije\no ceni</string>
    <string name="price_details_popup">Detaljnije o ceni...</string>
    <string name="model_price_detail_popup">Model:</string>
    <string name="dots_price_popup">............................</string>
    <string name="fuel_price_detail_popup">Gorivo:</string>
    <string name="hs_price_detail_popup">Konjaža:</string>
    <string name="equip_price_detail_popup">Dodatna oprema:</string>
    <string name="payment_textview_price_popup">Plaćanje</string>
    <string name="payment_price_detail_popup">Metod:</string>
    <string name="final_total_price_popup">Ukupna cena:</string>
    <string name="info_equip_popup">Svaka dodatna komponenta opreme se plaća 1000</string>
    <string name="info_valute_popup">Brojevi su predstavljeni u valtu:evro</string>
    <string name="info_RSequip_popup">Modeli iz serije RS su već opremljeni punom opremom</string>
    <string name="final_forwarding">Preusmeravanje na početnu stranicu</string>
    <string name="in">za</string>
    <string name="dots">...</string>
</resources>
