<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fragment_audi_model"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorGrey"
    tools:context="android.matija.com.audisrbija.FragmentAudiModel">

    <TextView
        android:id="@+id/odarabli_ste_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odabarli_ste_text_view"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="25dp"/>
    <TextView
        android:id="@+id/you_picked_model_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/odarabli_ste_text_view"
        android:textSize="15dp"
        android:text="@string/you_picked_model"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/you_picked_hs_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/you_picked_model_text_view"
        android:textSize="15dp"
        android:text="@string/you_picked_hs"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/you_picked_fuel_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/you_picked_hs_text_view"
        android:textSize="15dp"
        android:text="@string/you_picked_fuel"
        android:textColor="@color/colorWhite"/>


    <TextView
        android:id="@+id/you_picked_color_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/you_picked_fuel_text_view"
        android:textSize="15dp"
        android:text="@string/you_picked_color"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/view_car_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textSize="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/your_car"/>

    <TextView
        android:id="@+id/you_picked_additional_equipement_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_equipement_text_view"
        android:layout_below="@id/you_picked_color_text_view"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"/>

    <EditText
        android:id="@+id/your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/you_picked_additional_equipement_text_view"
        android:layout_marginTop="40dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:hint="@string/enter_your_name"
        android:textSize="15dp"
        android:background="@color/colorWhite"/>

    <EditText
        android:id="@+id/your_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_name"
        android:layout_marginTop="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:hint="@string/enter_your_surname"
        android:textSize="15dp"
        android:background="@color/colorWhite"/>

    <EditText
        android:id="@+id/your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_surname"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_your_email"
        android:textSize="15dp"
        android:background="@color/colorWhite"/>

    <TextView
        android:id="@+id/payment_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_email"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:text="@string/payment_text"
        android:textColor="@color/colorWhite"/>

    <Spinner
        android:id="@+id/spinner_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_textview"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog"
        android:prompt="@string/payment"/>


    <TextView
        android:id="@+id/monthly_payment_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/payment_textview"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/monthly_payment">
    </TextView>

    <Spinner
        android:id="@+id/spinner_payment_monthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/monthly_payment_text_view"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog"
        android:textDirection="ltr"
        android:prompt="@string/payment_monthly"/>

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_payment"
        android:layout_marginTop="30dp"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        tools:text="Cena je 2222222 evra"/>

    <Button
        android:id="@+id/more_details_price_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/price_text_view"
        android:layout_alignParentRight="true"
        android:textSize="10dp"
        android:text="@string/more_details_price"/>

    <Button
        android:id="@+id/send_final_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/send_final_button"/>

</RelativeLayout>
