<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGrey">

    <TextView
        android:id="@+id/details_price_text_view_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/price_details_popup"
        android:textColor="@color/colorWhite"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/info_valute_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_price_text_view_popup"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:textSize="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/info_valute_popup"/>

    <TextView
        android:id="@+id/model_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_price_text_view_popup"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/model_price_detail_popup"/>

    <TextView
        android:id="@+id/model_value_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/model_price_detail_popup"
        android:layout_marginLeft="100dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="RS_A7"/>
    <TextView
        android:id="@+id/model_dots_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/model_value_price_detail_popup"
        android:layout_alignBaseline="@id/model_price_detail_popup"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/dots_price_popup"/>
    <TextView
        android:id="@+id/model_price_value_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/model_dots_popup"
        android:layout_alignBaseline="@id/model_value_price_detail_popup"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="+15000"/>

    <TextView
        android:id="@+id/fuel_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/model_value_price_detail_popup"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/fuel_price_detail_popup"/>

    <TextView
        android:id="@+id/fuel_value_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fuel_price_detail_popup"
        android:layout_marginLeft="100dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="Benzin"/>
    <TextView
        android:id="@+id/fuel_dots_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/fuel_value_price_detail_popup"
        android:layout_alignBaseline="@id/fuel_price_detail_popup"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/dots_price_popup"/>

    <TextView
        android:id="@+id/fuel_value_price_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/fuel_dots_popup"
        android:layout_alignBaseline="@id/fuel_value_price_detail_popup"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="+2000"/>

    <TextView
        android:id="@+id/hs_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fuel_value_price_detail_popup"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/hs_price_detail_popup"/>

    <TextView
        android:id="@+id/hs_value_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="120ks"
        android:layout_alignBottom="@+id/hs_price_detail_popup"/>
    <TextView
        android:id="@+id/hs_dots_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/hs_value_price_detail_popup"
        android:layout_alignBaseline="@id/hs_price_detail_popup"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/dots_price_popup"/>
    <TextView
        android:id="@+id/hs_price_value_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/hs_dots_popup"
        android:layout_alignBaseline="@id/hs_value_price_detail_popup"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="+450"/>

    <TextView
        android:id="@+id/equip_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hs_value_price_detail_popup"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/equip_price_detail_popup"/>

    <TextView
        android:id="@+id/equip_value_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="7"
        android:layout_alignBottom="@+id/equip_price_detail_popup"/>
    <TextView
        android:id="@+id/equip_dots_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/equip_value_price_detail_popup"
        android:layout_alignBaseline="@id/equip_price_detail_popup"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/dots_price_popup"/>
    <TextView
        android:id="@+id/equip_price_value_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/equip_dots_popup"
        android:layout_alignBaseline="@id/equip_value_price_detail_popup"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="+7000"/>


    <TextView
        android:id="@+id/payment_textview_price_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:text="@string/payment_textview_price_popup"/>


    <TextView
        android:id="@+id/payment_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_textview_price_popup"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/payment_price_detail_popup"/>

    <TextView
        android:id="@+id/payment_value_price_detail_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="Po preuzimanju"
        android:layout_alignBottom="@id/payment_price_detail_popup"/>
    <TextView
        android:id="@+id/payment_dots_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/payment_value_price_detail_popup"
        android:layout_alignBaseline="@id/payment_price_detail_popup"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:text="@string/dots_price_popup"/>
    <TextView
        android:id="@+id/payment_price_value_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/payment_dots_popup"
        android:layout_alignBaseline="@id/payment_value_price_detail_popup"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        tools:text="+0"/>

    <TextView
        android:id="@+id/info_text_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/equip_price_detail_popup"
        android:layout_marginLeft="55dp"
        android:textSize="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/info_equip_popup"/>
    <TextView
        android:id="@+id/info_RStext_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_text_popup"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="5dp"
        android:textSize="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/info_RSequip_popup"/>


    <TextView
        android:id="@+id/final_total_price_text_view_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="100dp"
        android:textColor="@color/colorWhite"
        android:textSize="30dp"
        android:text="@string/final_total_price_popup"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_button_price_popup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorDarkGrey"
        android:textSize="15dp"
        android:text="@string/back_OK"/>

</RelativeLayout>