<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order_p1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorGrey"
    tools:context="android.matija.com.audisrbija.OrderActivityP1">

    <TextView
        android:id="@+id/model_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model_text_view"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"/>


    <RadioGroup
        android:id="@+id/model_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/model_text_view">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            tools:text="A4"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/model_radio_group_1"
        android:layout_toRightOf="@id/model_radio_group"
        android:layout_marginLeft="80dp"
        android:layout_below="@id/model_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            tools:text="A5"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/model_radio_group_2"
        android:layout_toRightOf="@id/model_radio_group_1"
        android:layout_marginLeft="90dp"
        android:layout_below="@id/model_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            tools:text="a6"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>

    </RadioGroup>

    <RelativeLayout
    android:id="@+id/relative_layout_fuel_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="70dp"
    android:layout_below="@id/model_radio_group">

    <TextView
        android:id="@+id/fuel_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_text_view"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"/>

    <RadioGroup
        android:id="@+id/fuel_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fuel_text_view">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>
    </RadioGroup>

    <TextView
        android:id="@+id/color_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_alignParentLeft="true"
        android:text="@string/color"
        android:layout_marginLeft="210dp"
        android:textColor="@color/colorWhite"/>

    <RadioGroup
        android:id="@+id/radio_group_color_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_text_view"
        android:layout_marginLeft="150dp"
        android:layout_alignParentLeft="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            tools:text="metalik siva"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_color_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="260dp"
        android:layout_below="@id/color_text_view">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            tools:text="metalik siva"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>

    </RadioGroup>

</RelativeLayout>



    <TextView
        android:id="@+id/additionalEquipement_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additionalEquipement_text_view"
        android:layout_below="@id/relative_layout_fuel_color"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorWhite"/>

    <android.matija.com.audisrbija.MultiChoiceSpinner
        android:id="@+id/spinner_additional_equipement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:prompt="@string/additional_equipement_choose"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp">
    </android.matija.com.audisrbija.MultiChoiceSpinner>



    <TextView
        android:id="@+id/horse_power_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motor_power"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/relative_layout_fuel_color"
        android:layout_alignParentRight="true"
        android:layout_marginTop="37dp"/>


    <RadioGroup
        android:id="@+id/horse_power_radio_group_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/horse_power_text_view"
        android:layout_marginRight="70dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            tools:text="120ks"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>
    </RadioGroup>


    <RadioGroup
        android:id="@+id/horse_power_radio_group_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/horse_power_text_view">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            tools:text="120ks"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"/>
    </RadioGroup>

    <Button
        android:id="@+id/forward_to_order_p2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/forward_to_order_p2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/must_select_fields"/>

</RelativeLayout>
